@@ -4,7 +4,7 @@ setup(
     name='qtile-extras',
     packages=find_packages(),
     include_package_data=True,
-    version='0.1.0',
+    version="0.0.1",
     description='Extra items for qtile that are unlikely to be maintained in the main repo.',
     author='elParaguayo',
     url='https://github.com/elparaguayo/qtile-extras',
